--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -54,6 +54,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    location /api/auth {
+        proxy_pass http://identity_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location /api/sales {
         proxy_pass http://sales_upstream;
         proxy_set_header Host $host;
