--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -62,6 +62,39 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    location /api/users {
+        proxy_pass http://identity_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /api/permissions {
+        proxy_pass http://identity_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /api/stores {
+        proxy_pass http://identity_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Master Data in Configuration
+    location /api/master-data {
+        proxy_pass http://configuration_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location /api/sales {
         proxy_pass http://sales_upstream;
         proxy_set_header Host $host;
