Fix undefined API URL in frontend build

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,6 +19,7 @@ COPY . .
 # Next.js collects completely anonymous telemetry data about general usage.
 # Learn more here: https://nextjs.org/telemetry
 ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_PUBLIC_API_URL=""
 
 RUN npm run build
 
