Add Nginx routes for categories and price-lists

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -144,6 +144,22 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    location /api/categories {
+        proxy_pass http://product_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /api/price-lists {
+        proxy_pass http://product_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location /api/analytics {
         proxy_pass http://analytics_upstream;
         proxy_set_header Host $host;
