Fix: Absolute path error in Configuration Service (Demo environment) by setting valid Linux upload path

--- a/backend/src/Services/Configuration/appsettings.Demo.json
+++ b/backend/src/Services/Configuration/appsettings.Demo.json
@@ -13,5 +13,8 @@
     "Issuer": "Profitzen.Identity",
     "Audience": "ProfitzenUsers",
     "ExpiryInMinutes": 60
+  },
+  "FileStorage": {
+    "UploadPath": "/var/profitzen/uploads"
   }
 }
