--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -127,6 +127,22 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    location /api/company {
+        proxy_pass http://configuration_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /api/public {
+        proxy_pass http://configuration_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Handle both singular and plural for Product just in case
     location /api/product {
         proxy_pass http://product_upstream;
