Refactor Analytics Dashboard: Grouped Top Products, Expandable Rows, and Precise Percentage Totals

--- a/backend/src/Services/Analytics/appsettings.Demo.json
+++ b/backend/src/Services/Analytics/appsettings.Demo.json
@@ -13,5 +13,8 @@
     "Issuer": "Profitzen.Identity.Demo",
     "Audience": "Profitzen.Api.Demo",
     "ExpiryInMinutes": 60
+  },
+  "AI": {
+    "OllamaUrl": "http://localhost:11434"
   }
 }
