--- a/backend/src/Services/Analytics/appsettings.Development.json
+++ b/backend/src/Services/Analytics/appsettings.Development.json
@@ -10,5 +10,8 @@
   },
   "JWT_SECRET": "default-super-secret-key-for-development-only-not-for-production",
   "JWT_ISSUER": "Profitzen.Identity",
-  "JWT_AUDIENCE": "Profitzen.Api"
+  "JWT_AUDIENCE": "Profitzen.Api",
+  "AI": {
+    "OllamaUrl": "http://localhost:11434"
+  }
 }
