--- a/backend/src/ApiGateway/appsettings.json
+++ b/backend/src/ApiGateway/appsettings.json
@@ -1,6 +1,10 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console" ],
+    "Using": [
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -24,9 +28,19 @@
           "retainedFileCountLimit": 30,
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
   },
   "AllowedHosts": "*"
 }
