--- a/backend/src/Services/Identity/appsettings.json
+++ b/backend/src/Services/Identity/appsettings.json
@@ -2,7 +2,8 @@
   "Serilog": {
     "Using": [
       "Serilog.Sinks.File",
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
     ],
     "MinimumLevel": {
       "Default": "Information",
@@ -26,6 +27,12 @@
           "rollingInterval": "Day",
           "retainedFileCountLimit": 30,
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
         }
       }
     ],
