--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,6 +11,8 @@ services:
     volumes:
       - postgres_prod_data:/var/lib/postgresql/data
       - ./backend/database/init-schemas.sql:/docker-entrypoint-initdb.d/01-init-schemas.sql
+    ports:
+      - "127.0.0.1:5432:5432"
     networks:
       - profitzen-prod-network
 
