Fix: Agregar configuración de Serilog/Seq en appsettings.Production.json de todos los servicios

--- a/backend/src/Services/Configuration/appsettings.Production.json
+++ b/backend/src/Services/Configuration/appsettings.Production.json
@@ -1,4 +1,38 @@
 {
+    "Serilog": {
+        "Using": [
+            "Serilog.Sinks.Console",
+            "Serilog.Sinks.Seq"
+        ],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "Microsoft.AspNetCore": "Warning",
+                "Microsoft.EntityFrameworkCore": "Warning",
+                "System": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console",
+                "Args": {
+                    "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+                }
+            },
+            {
+                "Name": "Seq",
+                "Args": {
+                    "serverUrl": "http://seq:5341"
+                }
+            }
+        ],
+        "Enrich": [
+            "FromLogContext",
+            "WithMachineName",
+            "WithThreadId"
+        ]
+    },
     "FileStorage": {
         "UploadPath": "/var/profitzen/uploads"
     }
