--- a/backend/src/Services/Product/appsettings.Production.json
+++ b/backend/src/Services/Product/appsettings.Production.json
@@ -1,4 +1,38 @@
 {
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://seq:5341"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
@@ -6,6 +40,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=profitzen_prod;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5433;Database=profitzen_prod;Username=postgres;Password=dev_password_123"
+  },
+  "JwtSettings": {
+    "SecretKey": "CHANGE_THIS_IN_PRODUCTION_USE_ENVIRONMENT_VARIABLE",
+    "Issuer": "Profitzen.Identity",
+    "Audience": "Profitzen.Api",
+    "ExpiryInMinutes": 480
   }
 }
