--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -104,6 +104,9 @@ services:
       - ASPNETCORE_URLS=http://+:8080
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=profitzen;Username=${DB_USER:-postgres};Password=${DB_PASSWORD}
       - Services__ApiKey=${SERVICE_KEY}
+      - Services__MasterData__Url=http://configuration-service:8080
+      - Services__Inventory__Url=http://inventory-service:8080
+      - Services__Identity__Url=http://identity-service:8080
       - Serilog__WriteTo__2__Args__serverUrl=http://seq:5341
     depends_on:
       - postgres
