--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -143,7 +143,7 @@ services:
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=profitzen;Username=${DB_USER:-postgres};Password=${DB_PASSWORD}
       - Services__ApiKey=${SERVICE_KEY}
       - Serilog__WriteTo__2__Args__serverUrl=http://seq:5341
-      - AI__OllamaUrl=http://ollama:11434
+      - AI__OllamaUrl=http://host.docker.internal:11434
     depends_on:
       - postgres
     networks:
