--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -144,6 +144,8 @@ services:
       - Services__ApiKey=${SERVICE_KEY}
       - Serilog__WriteTo__2__Args__serverUrl=http://seq:5341
       - AI__OllamaUrl=http://host.docker.internal:11434
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - postgres
     networks:
