Fix: Explicitly set OllamaUrl in Analytics appsettings to host.docker.internal

--- a/backend/src/Services/Analytics/appsettings.Demo.json
+++ b/backend/src/Services/Analytics/appsettings.Demo.json
@@ -49,6 +49,6 @@
     "ExpiryInMinutes": 60
   },
   "AI": {
-    "OllamaUrl": "http://localhost:11434"
+    "OllamaUrl": "http://host.docker.internal:11434"
   }
 }
