--- a/backend/src/Services/Analytics/appsettings.Production.json
+++ b/backend/src/Services/Analytics/appsettings.Production.json
@@ -47,5 +47,8 @@
     "Issuer": "Profitzen.Identity",
     "Audience": "Profitzen.Api",
     "ExpiryInMinutes": 480
+  },
+  "AI": {
+    "OllamaUrl": "http://host.docker.internal:11434"
   }
 }
