Fix: Flatten AI__OllamaUrl key in appsettings to match code expectation

--- a/backend/src/Services/Analytics/appsettings.Demo.json
+++ b/backend/src/Services/Analytics/appsettings.Demo.json
@@ -48,7 +48,5 @@
     "Audience": "Profitzen.Api.Demo",
     "ExpiryInMinutes": 60
   },
-  "AI": {
-    "OllamaUrl": "http://host.docker.internal:11434"
-  }
+  "AI__OllamaUrl": "http://host.docker.internal:11434"
 }
