--- a/backend/src/Services/Analytics/appsettings.Production.json
+++ b/backend/src/Services/Analytics/appsettings.Production.json
@@ -48,7 +48,5 @@
     "Audience": "Profitzen.Api",
     "ExpiryInMinutes": 480
   },
-  "AI": {
-    "OllamaUrl": "http://host.docker.internal:11434"
-  }
+  "AI__OllamaUrl": "http://host.docker.internal:11434"
 }
