feat: Atomic sale creation & UOM multi-line sales + AI config fix
BACKEND:
- Refactored CreateSaleAsync to support atomic sale creation with items and payments in single transaction
- Eliminated concurrency errors by reducing 4 API calls to 1 for sale processing
- Enhanced addToCart with smart UOM fallback when default unit has no stock
- Fixed Analytics AI configuration to use localhost for local/demo environments
- Updated Ollama model configuration to be dynamic via appsettings

FRONTEND:
- Implemented atomic sale submission (items + payments in one request)
- Added multi-UOM sale capability: users can now sell same product in different units simultaneously
- Improved cart item visualization with better spacing and UOM selector design
- Added interactive stock badges with click-to-select functionality
- Implemented visual guides and tooltips for UOM selection discovery
- Enhanced product card design with selection indicators and help text

FIXES:
- Resolved DbUpdateConcurrencyException during sale processing
- Fixed 404 error in Analytics AI service (Ollama connection)
- Improved stock validation to prevent overselling across multiple UOMs
- Better error handling for products with partial stock availability

--- a/backend/src/Services/Analytics/appsettings.Demo.json
+++ b/backend/src/Services/Analytics/appsettings.Demo.json
@@ -48,5 +48,8 @@
     "Audience": "Profitzen.Api.Demo",
     "ExpiryInMinutes": 60
   },
-  "AI__OllamaUrl": "http://host.docker.internal:11434"
+  "AI": {
+    "OllamaUrl": "http://localhost:11434",
+    "Model": "llama3"
+  }
 }
