--- a/backend/src/Services/Analytics/appsettings.Development.json
+++ b/backend/src/Services/Analytics/appsettings.Development.json
@@ -12,6 +12,7 @@
   "JWT_ISSUER": "Profitzen.Identity",
   "JWT_AUDIENCE": "Profitzen.Api",
   "AI": {
-    "OllamaUrl": "http://localhost:11434"
+    "OllamaUrl": "http://localhost:11434",
+    "Model": "llama3"
   }
 }
