fix: Configure Ollama AI to use llama3.2 and fix connection in production
- Updated all environments to use llama3.2 (lighter model already installed in VPS)
- Fixed AI configuration format from AI__ to AI: in docker-compose files
- Added AI:Model environment variable to all docker-compose configurations
- Updated Program.cs default model to llama3.2
- This fixes the 404 error when invoking AI prompts for inventory insights

--- a/docker-compose.demo.yml
+++ b/docker-compose.demo.yml
@@ -147,6 +147,7 @@ services:
       - Services__ApiKey=${SERVICE_KEY}
       - Serilog__WriteTo__2__Args__serverUrl=http://seq-demo:5341
       - AI__OllamaUrl=http://host.docker.internal:11434
+      - AI:Model=llama3.2
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
@@ -194,7 +195,7 @@ services:
     networks:
       - profitzen-demo-network
     command: >
-      sh -c "sleep 10 && curl -X POST http://ollama-demo:11434/api/pull -d '{\"name\": \"llama3\"}'"
+      sh -c "sleep 10 && curl -X POST http://ollama-demo:11434/api/pull -d '{\"name\": \"llama3.2\"}'"
 
   seq-demo:
     image: datalust/seq:latest
