--- a/backend/src/Services/Analytics/appsettings.Production.json
+++ b/backend/src/Services/Analytics/appsettings.Production.json
@@ -48,5 +48,8 @@
     "Audience": "Profitzen.Api",
     "ExpiryInMinutes": 480
   },
-  "AI__OllamaUrl": "http://host.docker.internal:11434"
+  "AI": {
+    "OllamaUrl": "http://host.docker.internal:11434",
+    "Model": "llama3.2"
+  }
 }
