--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -143,7 +143,8 @@ services:
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=profitzen;Username=${DB_USER:-postgres};Password=${DB_PASSWORD}
       - Services__ApiKey=${SERVICE_KEY}
       - Serilog__WriteTo__2__Args__serverUrl=http://seq:5341
-      - AI__OllamaUrl=http://host.docker.internal:11434
+      - AI:OllamaUrl=http://host.docker.internal:11434
+      - AI:Model=llama3.2
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
@@ -194,7 +195,7 @@ services:
     networks:
       - profitzen-prod-network
     command: >
-      sh -c "sleep 10 && curl -X POST http://ollama:11434/api/pull -d '{\"name\": \"llama3\"}'"
+      sh -c "sleep 10 && curl -X POST http://ollama:11434/api/pull -d '{\"name\": \"llama3.2\"}'"
 
   seq:
     image: datalust/seq:latest
