--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -180,22 +180,22 @@ services:
     networks:
       - profitzen-prod-network
 
-  ollama:
-    image: ollama/ollama:latest
-    restart: always
-    volumes:
-      - ollama_prod_data:/root/.ollama
-    networks:
-      - profitzen-prod-network
-
-  ollama-pull-model:
-    image: curlimages/curl
-    depends_on:
-      - ollama
-    networks:
-      - profitzen-prod-network
-    command: >
-      sh -c "sleep 10 && curl -X POST http://ollama:11434/api/pull -d '{\"name\": \"llama3.2\"}'"
+  #   ollama:
+  #     image: ollama/ollama:latest
+  #     restart: always
+  #     volumes:
+  #       - ollama_prod_data:/root/.ollama
+  #     networks:
+  #       - profitzen-prod-network
+  #
+  #   ollama-pull-model:
+  #     image: curlimages/curl
+  #     depends_on:
+  #       - ollama
+  #     networks:
+  #       - profitzen-prod-network
+  #     command: >
+  #       sh -c "sleep 10 && curl -X POST http://ollama:11434/api/pull -d '{\"name\": \"llama3.2\"}'"
 
   seq:
     image: datalust/seq:latest
