--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -143,10 +143,8 @@ services:
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=profitzen;Username=${DB_USER:-postgres};Password=${DB_PASSWORD}
       - Services__ApiKey=${SERVICE_KEY}
       - Serilog__WriteTo__2__Args__serverUrl=http://seq:5341
-      - AI:OllamaUrl=http://host.docker.internal:11434
-      - AI:Model=llama3.2
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - AI__OllamaUrl=${AI__OllamaUrl:-http://localhost:11434}
+      - AI__Model=${AI__Model:-llama3.2}
     depends_on:
       - postgres
     networks:
