--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -145,6 +145,7 @@ services:
       - Serilog__WriteTo__2__Args__serverUrl=http://seq:5341
       - AI__OllamaUrl=${AI__OllamaUrl:-http://localhost:11434}
       - AI__Model=${AI__Model:-llama3.2}
+      - AI__ApiKey=${AI__ApiKey}
     depends_on:
       - postgres
     networks:
