--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -26,9 +26,9 @@ upstream product_upstream {
     server product-service:8080;
 }
 
-upstream analytics_upstream {
-    server analytics-service:8080;
-}
+# upstream analytics_upstream {
+#     server analytics-service:8080;
+# }
 
 server {
     listen 80;
@@ -176,16 +176,16 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /api/analytics {
-        proxy_pass http://analytics_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Extended timeouts for AI operations
-        proxy_read_timeout 600s;
-        proxy_connect_timeout 600s;
-        proxy_send_timeout 600s;
-    }
+    # location /api/analytics {
+    #     proxy_pass http://analytics_upstream;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     
+    #     # Extended timeouts for AI operations
+    #     proxy_read_timeout 600s;
+    #     proxy_connect_timeout 600s;
+    #     proxy_send_timeout 600s;
+    # }
 }
