Identity: Enable password recovery email sending

--- a/backend/src/Services/Identity/appsettings.Production.json
+++ b/backend/src/Services/Identity/appsettings.Production.json
@@ -51,5 +51,16 @@
   "EnvironmentSettings": {
     "IsDemo": false,
     "AutoSeedDemoData": false
+  },
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SmtpUser": "",
+    "SmtpPass": "",
+    "FromEmail": "no-reply@profitzen.com",
+    "FromName": "Profitzen"
+  },
+  "AppSettings": {
+    "FrontendUrl": "http://76.13.106.53"
   }
 }
