--- a/backend/src/Services/Identity/appsettings.json
+++ b/backend/src/Services/Identity/appsettings.json
@@ -51,5 +51,16 @@
     "Issuer": "Profitzen.Identity",
     "Audience": "Profitzen.Api",
     "ExpiryInMinutes": 60
+  },
+  "EmailSettings": {
+    "SmtpHost": "",
+    "SmtpPort": "587",
+    "SmtpUser": "",
+    "SmtpPass": "",
+    "FromEmail": "no-reply@profitzen.com",
+    "FromName": "Profitzen"
+  },
+  "AppSettings": {
+    "FrontendUrl": "http://localhost:3000"
   }
 }
