--- a/backend/src/Services/Analytics/appsettings.Demo.json
+++ b/backend/src/Services/Analytics/appsettings.Demo.json
@@ -49,7 +49,7 @@
     "ExpiryInMinutes": 60
   },
   "AI": {
-    "OllamaUrl": "http://localhost:11434",
-    "Model": "llama3.2"
+    "GroqUrl": "https://api.groq.com/openai/v1",
+    "Model": "llama-3.3-70b-versatile"
   }
 }
